<resources>
    <string name="app_name">inclass04</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cs">Computer Science</string>
    <string name="bio">Bio Informatics</string>
    <string name="sft">Software Info. System</string>
    <string name="data">Data Science</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="submit">Submit</string>
    <string name="registerBtn">Register</string>
    <string name="welcome">Welcome !!</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="id">ID:</string>
    <string name="department">Dept:</string>
    <string name="hintName">Enter Name</string>
    <string name="hintEmail">Enter Email</string>
    <string name="hintID">Enter ID</string>
    <string name="nameLbl2">Name:</string>
    <string name="emailLbl2">Email:</string>
    <string name="idLbl2">ID:</string>
    <string name="deptLbl2">Dept:</string>
    <string name="nameResult">%Name%</string>
    <string name="emailResult">%Email%</string>
    <string name="IdResult">%ID%</string>
    <string name="deptResult">%Dept%</string>

</resources>