<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/department"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectDepartmentFragment">

    <!-- TODO: Update blank fragment layout -->


    <RadioGroup
        android:id="@+id/concentration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="50dp">


        <RadioButton
            android:id="@+id/cs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cs" />

        <RadioButton
            android:id="@+id/software"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sft" />

        <RadioButton
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio" />

        <RadioButton
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data" />
    </RadioGroup>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_margin="60dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="60dp"
        android:text="@string/select" />


</FrameLayout>